# tauri-log-plugin-rs

./: Cargo.toml
.changes/: config.json
.github/workflows/: test.yml
example/src-tauri/src/: main.rs
examples/vanilla/: .gitignore  package.json
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: lib.rs
typescript/: babel.config.js  package.json  rollup.config.js  tsconfig.json
typescript/src/: index.ts
