[package]
name = "tauri-log-plugin"
version = "0.1.0"
authors = ["Lucas Nogueira <lucas@tauri.studio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev" }
tauri = { path = "../tauri/tauri" }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
anyhow = "1.0"
byte-unit = "4.0"
fern = "0.6"
log = "0.4"
chrono = "0.4"
